--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "order-food-online",
   "version": "1.1.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
+  "homepage": "",
   "dependencies": {
     "bootstrap": "4.3.1",
     "chart.js": "2.8.0",
